--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <!-- Add Iconify SVG framework: https://docs.iconify.design/icon-components/svg-framework/ -->
+        <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
     </head>
     <body id="page-top">
         <!-- Navigation-->
