--- a/index.html
+++ b/index.html
@@ -254,7 +254,19 @@
                       <!-- Programming & Softwares -->
                       <div class="subheading mb-3">Programming languages & Softwares</div>
                         <div class="resume-skill-item">
-                          <ul class="list-unstyled mb-4">
+                          <ul class="list-inline dev-icons">
+                            <li class="list-inline-item"><i class=class="iconify" data-icon="file-icons:matlab"></i></li>
+                            <li class="list-inline-item"><i class="fab fa-r-project"></i></li>
+                            <li class="list-inline-item"><i class="fab fa-git"></i></li>
+                            <li class="list-inline-item"><i class="fab fa-python"></i></li>
+                            <li class="list-inline-item"><i class="fas fa-file-code"></i></li>
+                            <li class="list-inline-item"><i class="fas fa-file-word"></i></li>
+                            <li class="list-inline-item"><i class="fas fa-file-excel"></i></li>
+                            <li class="list-inline-item"><i class="fas fa-file-powerpoint"></i></li>
+                            <li class="list-inline-item"><i class="iconify" data-icon="whh:limesurvey"></i></li>
+                          </ul>
+
+                          <!-- <ul class="list-unstyled mb-4">
                             <li class="mb-2">
                                 <div class="resume-skill-name">MATLAB</div>
                                 <span class="iconify" data-icon="file-icons:matlab"></span>
@@ -324,7 +336,7 @@
                                 <div class="resume-skill-name">REDCap</div>
                               <div class="progress resume-progress">
                               <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
+                        </div> -->
 
                         <!-- Languages -->
                         <div class="subheading mb-3">Languages</div>
