--- a/index.html
+++ b/index.html
@@ -341,7 +341,11 @@
                         <!-- Languages -->
                         <div class="subheading mb-3">Languages</div>
                         <div class="resume-skill-item">
-                          <ul class="list-unstyled mb-4">
+                          <ul class="list-inline dev-icons">
+                            <li class="list-inline-item"><i><img src="/assets/img/fr.svg"/></i></li>
+                          </ul>
+
+                          <!-- <ul class="list-unstyled mb-4">
                             <li class="mb-2">
                                 <div class="resume-skill-name">French [C2]</div>
                               <div class="progress resume-progress">
@@ -370,7 +374,7 @@
                                 <div class="resume-skill-name">German [A2]</div>
                               <div class="progress resume-progress">
                               <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
+                        </div> -->
                 </div>
             </section>
 
