--- a/index.html
+++ b/index.html
@@ -342,7 +342,8 @@
                         <div class="subheading mb-3">Languages</div>
                         <div class="resume-skill-item">
                           <ul class="list-inline dev-icons">
-                            <li class="list-inline-item"><i><img src="/assets/img/fr.svg"/></i></li>
+                            <span class=“\e903”></span>
+                            <li class="list-inline-item"><i class=“\e903”></i></li>
                           </ul>
 
                           <!-- <ul class="list-unstyled mb-4">
@@ -445,12 +446,12 @@
                     <h3 class="mb-0">Automated EEG Data Processing</h3><br>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/NeuroMorph_screenshot.png" width="200"> </div>
+                        <!-- <div class="flex-shrink-0-im pr-5"><img src="assets/img/NeuroMorph_screenshot.png" width="200"> </div>
                         <div class="flex-grow-1">
                             <div><a href="http://neuromorph.epfl.ch" style="font-weight:bold;">Project Page</a></div>
                             <br>
                             <div><a href="https://github.com/NeuroMorph-EPFL/NeuroMorph" style="font-weight:bold;">Code and Documentation on GitHub</a></div>
-                        </div>
+                        </div> -->
                     </div>
                   </div>
                 <!-- </div> -->
