--- a/index.html
+++ b/index.html
@@ -342,8 +342,8 @@
                         <div class="subheading mb-3">Languages</div>
                         <div class="resume-skill-item">
                           <ul class="list-inline dev-icons">
-                            <span class=“e903”></span>
-                            <li class="list-inline-item"><i class=“e903”></i></li>
+                            <span class=“path1”></span>
+                            <li class="list-inline-item"><i class=“path1”></i></li>
                           </ul>
 
                           <!-- <ul class="list-unstyled mb-4">
