--- a/index.html
+++ b/index.html
@@ -339,6 +339,7 @@
                         </div> -->
 
                         <!-- Languages -->
+                        <!-- NOT WORKING !! -->
                         <div class="subheading mb-3">Languages</div>
                         <div class="resume-skill-item">
                           <ul class="list-inline dev-icons">
@@ -346,7 +347,7 @@
                             <li class="list-inline-item"><i class=“path1”></i></li>
                           </ul>
 
-                          <!-- <ul class="list-unstyled mb-4">
+                          <ul class="list-unstyled mb-4">
                             <li class="mb-2">
                                 <div class="resume-skill-name">French [C2]</div>
                               <div class="progress resume-progress">
@@ -375,7 +376,7 @@
                                 <div class="resume-skill-name">German [A2]</div>
                               <div class="progress resume-progress">
                               <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div> -->
+                        </div>
                 </div>
             </section>
 
