--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <div class="flex-grow-1">
                           <h3 class="mb-0">Research Assistant</h3>
                           <div class="subheading mb-3"><a href="https://www.h-fr.ch/nos-specialites/nos-specialites-medicales/neurologie">Neurology Unit, Cantonal Hospital Fribourg, CH</a></div>
-                          <p>INCLUDE TEXT [10-20%]</p>
+                          <p>Development of a semi-automated EEG pre-processing and analysis software and application to clinical data [10-20%]</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">05.2019-09.2020</span></div>
                     </div>
@@ -103,7 +103,7 @@
                         <div class="flex-grow-1">
                           <h3 class="mb-0">Graduate Assistant</h3>
                           <div class="subheading mb-3"><a href="https://www.unil.ch/carla/fr/home.html">Cognitive and Affective Regulation Laboratory, University of Lausanne, CH</a></div>
-                          <p>INCLUDE TEXT ... under the supervision of <a href="https://applicationspub.unil.ch/interpub/noauth/php/Un/UnPers.php?PerNum=1116121&LanCode=8">Prof Christine Mohr</a> [90%]</p>
+                          <p>Research on deception and beliefs and teaching assistant duties under the supervision of <a href="https://applicationspub.unil.ch/interpub/noauth/php/Un/UnPers.php?PerNum=1116121&LanCode=8">Prof Christine Mohr</a> [90%]</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">11.2017-09.2018</span></div>
                     </div>
@@ -112,7 +112,7 @@
                         <div class="flex-grow-1">
                           <h3 class="mb-0">Teaching Assistant</h3>
                           <div class="subheading mb-3"><a href="https://www.epfl.ch/schools/sv/fr/">School of Life Sciences, Federal Institute of Technology, CH</a></div>
-                          <p> Part-time teaching assistant position for the seminar "Experimental Cognitive Psychology" under the supervision of <a href="https://people.epfl.ch/218732">Prof Christine Mohr</a> </p>
+                          <p>Part-time teaching assistant position for the seminar "Experimental Cognitive Psychology" under the supervision of <a href="https://people.epfl.ch/218732">Prof Christine Mohr</a> </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">11.2017-09.2018</span></div>
                     </div>
@@ -121,7 +121,7 @@
                         <div class="flex-grow-1">
                           <h3 class="mb-0">Teaching Assistant</h3>
                           <div class="subheading mb-3"><a href="https://www.unifr.ch/med/fr/">Department of Medicine, University of Fribourg, CH</a></div>
-                          <p> Part-time teaching assistant position for the seminar "Travaux pratiques de physiologie" under the supervision of <a href="https://www.unifr.ch/med/de/research/groups/rouiller/members/people/6462/0e6a8/">PD Dr Eric Schmidlin</a> </p>
+                          <p>Part-time teaching assistant position for the seminar "Travaux pratiques de physiologie" under the supervision of <a href="https://www.unifr.ch/med/de/research/groups/rouiller/members/people/6462/0e6a8/">PD Dr Eric Schmidlin</a> </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">04.2017-05.2017</span></div>
                     </div>
@@ -130,7 +130,7 @@
                         <div class="flex-grow-1">
                           <h3 class="mb-0">Teaching Assistant</h3>
                           <div class="subheading mb-3"><a href="https://www.unifr.ch/psycho/fr/">Department of Psychology, University of Fribourg, CH</a></div>
-                          <p> Part-time teaching assistant position for the seminar "Méthodologie de la recherche" under the supervision of <a href="https://perso.unifr.ch/pascal.gygax/">PD Dr Pascal Gygax</a> </p>
+                          <p>Part-time teaching assistant position for the seminar "Méthodologie de la recherche" under the supervision of <a href="https://perso.unifr.ch/pascal.gygax/">PD Dr Pascal Gygax</a> </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">02.2017-09.2017</span></div>
                     </div>
@@ -139,7 +139,7 @@
                         <div class="flex-grow-1">
                           <h3 class="mb-0">Research Assistant</h3>
                           <div class="subheading mb-3"><a href="https://www.unifr.ch/med/fr/">Department of Medicine, University of Fribourg, CH</a></div>
-                          <p> INCLUDE TEXT [80%] ... under the supervision of <a href="https://www.unifr.ch/med/fr/section/departments/nms/people/11048/b2de9">PD Dr Lucas Spierer</a> </p>
+                          <p>Research on the neuropharmacological underpinning of executive functions (e.g., inhibitory control) under the supervision of <a href="https://www.unifr.ch/med/fr/section/departments/nms/people/11048/b2de9">PD Dr Lucas Spierer</a> </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">09.2016-10.2017</span></div>
                     </div>
@@ -148,7 +148,7 @@
                         <div class="flex-grow-1">
                           <h3 class="mb-0">Research Assistant</h3>
                           <div class="subheading mb-3"><a href="https://www.unifr.ch/med/fr/">Department of Medicine, University of Fribourg, CH</a></div>
-                          <p> INCLUDE TEXT [10-20%] ... under the supervision of <a href="https://perso.unifr.ch/pascal.gygax/">MD Dr Joelle Chabwine</a> </p>
+                          <p>Development of a semi-automated EEG pre-processing and analysis software and application to clinical data under the supervision of <a href="https://perso.unifr.ch/pascal.gygax/">MD Dr Joelle Chabwine</a> </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">XXX-XXX</span></div>
                     </div>
@@ -157,7 +157,7 @@
                         <div class="flex-grow-1">
                           <h3 class="mb-0">Teaching Assistant</h3>
                           <div class="subheading mb-3"><a href="https://www.unifr.ch/psycho/fr/">Department of Psychology, University of Fribourg, CH</a></div>
-                          <p> Part-time teaching assistant position for the seminars "Statistiques I" and "Statistiques II" under the supervision of <a href="https://www.unifr.ch/psycho/fr/departement/personnel/dept/people/9153/1cd4f">Dr Pascal Wagner</a> </p>
+                          <p>Part-time teaching assistant position for the seminars "Statistiques I" and "Statistiques II" under the supervision of <a href="https://www.unifr.ch/psycho/fr/departement/personnel/dept/people/9153/1cd4f">Dr Pascal Wagner</a> </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">09.2015-10.2017</span></div>
                     </div>
@@ -166,7 +166,7 @@
                         <div class="flex-grow-1">
                           <h3 class="mb-0">Teaching Assistant</h3>
                           <div class="subheading mb-3"><a href="https://www.unifr.ch/psycho/fr/">Department of Psychology, University of Fribourg, CH</a></div>
-                          <p> Part-time teaching assistant position for the seminar "E-PRIME: Expérimentation assistée par ordinateur" under the supervision of <a href="https://perso.unifr.ch/roberto.caldara/">Prof Roberto Caldara</a> </p>
+                          <p>Part-time teaching assistant position for the seminar "E-PRIME: Expérimentation assistée par ordinateur" under the supervision of <a href="https://perso.unifr.ch/roberto.caldara/">Prof Roberto Caldara</a> </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">09.2014-02.2015</span></div>
                     </div>
@@ -264,6 +264,7 @@
                             <li class="list-inline-item"><i class="fas fa-file-excel"></i></li>
                             <li class="list-inline-item"><i class="fas fa-file-powerpoint"></i></li>
                             <li class="list-inline-item"><i class="iconify" data-icon="whh:limesurvey"></i></li>
+                            <!-- MIssing: REDCap and SPSS -->
                           </ul>
 
                           <!-- <ul class="list-unstyled mb-4">
@@ -342,10 +343,12 @@
                         <!-- NOT WORKING !! -->
                         <div class="subheading mb-3">Languages</div>
                         <div class="resume-skill-item">
-                          <ul class="list-inline dev-icons">
+                          <img src = "\assets\fr.svg" alt="French"/>
+                          <object data="\assets\fr.svg" width="90" height="90"> </object>
+                          <!-- <ul class="list-inline dev-icons">
                             <span class=“path1”></span>
                             <li class="list-inline-item"><i class=“path1”></i></li>
-                          </ul>
+                          </ul> -->
 
                           <ul class="list-unstyled mb-4">
                             <li class="mb-2">
