--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <div class="flex-grow-1">
                           <h3 class="mb-0">Graduate Assistant</h3>
                           <div class="subheading mb-3"><a href="https://www.unil.ch/carla/fr/home.html">Cognitive and Affective Regulation Laboratory, University of Lausanne, CH</a></div>
-                          <p>Research on deception and beliefs and teaching assistant duties under the supervision of <a href="https://applicationspub.unil.ch/interpub/noauth/php/Un/UnPers.php?PerNum=1116121&LanCode=8">Prof Christine Mohr</a> [90%]</p>
+                          <p>Research on deception and beliefs under the supervision of <a href="https://applicationspub.unil.ch/interpub/noauth/php/Un/UnPers.php?PerNum=1116121&LanCode=8">Prof Christine Mohr</a> [90%]</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">11.2017-09.2018</span></div>
                     </div>
@@ -139,7 +139,7 @@
                         <div class="flex-grow-1">
                           <h3 class="mb-0">Research Assistant</h3>
                           <div class="subheading mb-3"><a href="https://www.unifr.ch/med/fr/">Department of Medicine, University of Fribourg, CH</a></div>
-                          <p>Research on the neuropharmacological underpinning of executive functions (e.g., inhibitory control) under the supervision of <a href="https://www.unifr.ch/med/fr/section/departments/nms/people/11048/b2de9">PD Dr Lucas Spierer</a> </p>
+                          <p>Research on the neuropharmacological underpinnings of executive functions (e.g., inhibitory control) under the supervision of <a href="https://www.unifr.ch/med/fr/section/departments/nms/people/11048/b2de9">PD Dr Lucas Spierer</a> </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">09.2016-10.2017</span></div>
                     </div>
@@ -148,7 +148,7 @@
                         <div class="flex-grow-1">
                           <h3 class="mb-0">Research Assistant</h3>
                           <div class="subheading mb-3"><a href="https://www.unifr.ch/med/fr/">Department of Medicine, University of Fribourg, CH</a></div>
-                          <p>Development of a semi-automated EEG pre-processing and analysis software and application to clinical data under the supervision of <a href="https://perso.unifr.ch/pascal.gygax/">MD Dr Joelle Chabwine</a> </p>
+                          <p>Development of a semi-automated EEG pre-processing and analysis software and analysis of clinical data under the supervision of <a href="https://perso.unifr.ch/pascal.gygax/">MD Dr Joelle Chabwine</a> </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">XXX-XXX</span></div>
                     </div>
@@ -343,8 +343,8 @@
                         <!-- NOT WORKING !! -->
                         <div class="subheading mb-3">Languages</div>
                         <div class="resume-skill-item">
-                          <img src = "\assets\fr.svg" alt="French"/>
-                          <object data="\assets\fr.svg" width="90" height="90"> </object>
+                          <img src = "/assets/fr.svg" alt="French"/>
+                          <object data="/assets/fr.svg" width="90" height="90"> </object>
                           <!-- <ul class="list-inline dev-icons">
                             <span class=“path1”></span>
                             <li class="list-inline-item"><i class=“path1”></i></li>
