--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                           <div class="subheading mb-3"><a href="https://www.unifr.ch/med/fr/">Department of Medicine, University of Fribourg, CH</a></div>
                           <p>Development of a semi-automated EEG pre-processing and analysis software and analysis of clinical data under the supervision of <a href="https://perso.unifr.ch/pascal.gygax/">MD Dr Joelle Chabwine</a> </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">XXX-XXX</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">XX.2016-XX.2017</span></div>
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -255,6 +255,7 @@
                       <div class="subheading mb-3">Programming languages & Softwares</div>
                         <div class="resume-skill-item">
                           <ul class="list-inline dev-icons">
+                            <li class="list-inline-item"><span class="iconify" data-icon="file-icons:matlab"></span></li>
                             <li class="list-inline-item"><i class=class="iconify" data-icon="file-icons:matlab"></i></li>
                             <li class="list-inline-item"><i class="fab fa-r-project"></i></li>
                             <li class="list-inline-item"><i class="fab fa-git"></i></li>
