--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@
                       <div class="subheading mb-3">Programming languages & Softwares</div>
                         <div class="resume-skill-item">
                           <ul class="list-inline dev-icons">
-                            <li class="list-inline-item"><span class="iconify" data-icon="file-icons:matlab"></span></li>
-                            <li class="list-inline-item"><i class=class="iconify" data-icon="file-icons:matlab"></i></li>
+                            <li class="list-inline-item"><i<span class="iconify" data-icon="file-icons:matlab"></span></i></li>
+                            <!-- <li class="list-inline-item"><i class=class="iconify" data-icon="file-icons:matlab"></i></li> -->
                             <li class="list-inline-item"><i class="fab fa-r-project"></i></li>
                             <li class="list-inline-item"><i class="fab fa-git"></i></li>
                             <li class="list-inline-item"><i class="fab fa-python"></i></li>
