--- a/index.html
+++ b/index.html
@@ -255,8 +255,7 @@
                       <div class="subheading mb-3">Programming languages & Softwares</div>
                         <div class="resume-skill-item">
                           <ul class="list-inline dev-icons">
-                            <li class="list-inline-item"><i<span class="iconify" data-icon="file-icons:matlab"></span></i></li>
-                            <!-- <li class="list-inline-item"><i class=class="iconify" data-icon="file-icons:matlab"></i></li> -->
+                            <li class="list-inline-item"><span class="iconify" data-icon="file-icons:matlab"></span></li>
                             <li class="list-inline-item"><i class="fab fa-r-project"></i></li>
                             <li class="list-inline-item"><i class="fab fa-git"></i></li>
                             <li class="list-inline-item"><i class="fab fa-python"></i></li>
@@ -351,14 +350,14 @@
                             <li class="list-inline-item"><i class=“path1”></i></li>
                           </ul> -->
 
-                          <ul class="list-unstyled mb-4">
+                          <!-- <ul class="list-unstyled mb-4">
                             <li class="mb-2">
                                 <div class="resume-skill-name">French [C2]</div>
                               <div class="progress resume-progress">
-                              <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                              <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div> -->
                         </div>
 
-                        <div class="resume-skill-item">
+                        <!-- <div class="resume-skill-item">
                           <ul class="list-unstyled mb-4">
                             <li class="mb-2">
                                 <div class="resume-skill-name">English [C1]</div>
@@ -380,7 +379,7 @@
                                 <div class="resume-skill-name">German [A2]</div>
                               <div class="progress resume-progress">
                               <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
+                        </div> -->
                 </div>
             </section>
 
