--- a/index.html
+++ b/index.html
@@ -343,8 +343,8 @@
                         <!-- NOT WORKING !! -->
                         <div class="subheading mb-3">Languages</div>
                         <div class="resume-skill-item">
-                          <img src = "/assets/fr.svg" alt="French"/>
-                          <object data="/assets/fr.svg" width="90" height="90"> </object>
+                          <img src = "/assets/img/fr.svg" alt="French"/>
+                          <object data="/assets/img/fr.svg" width="90" height="90"> </object>
                           <!-- <ul class="list-inline dev-icons">
                             <span class=“path1”></span>
                             <li class="list-inline-item"><i class=“path1”></i></li>
