Changing size of images

--- a/index.html
+++ b/index.html
@@ -264,89 +264,17 @@
                             <li class="list-inline-item"><i class="fas fa-file-excel"></i></li>
                             <li class="list-inline-item"><i class="fas fa-file-powerpoint"></i></li>
                             <li class="list-inline-item"><i class="iconify" data-icon="whh:limesurvey"></i></li>
-                            <!-- MIssing: REDCap and SPSS -->
+                            <!-- MIssing: REDCap, SPSS, E-Prime -->
                           </ul>
 
-                          <!-- <ul class="list-unstyled mb-4">
-                            <li class="mb-2">
-                                <div class="resume-skill-name">MATLAB</div>
-                                <span class="iconify" data-icon="file-icons:matlab"></span>
-                              <div class="progress resume-progress">
-                              <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 98%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-
-                        <div class="resume-skill-item">
-                          <ul class="list-unstyled mb-4">
-                            <li class="mb-2">
-                                <div class="resume-skill-name">R</div>
-                              <div class="progress resume-progress">
-                              <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 96%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-
-                        <div class="resume-skill-item">
-                          <ul class="list-unstyled mb-4">
-                            <li class="mb-2">
-                                <div class="resume-skill-name">SPSS</div>
-                              <div class="progress resume-progress">
-                              <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 98%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-
-                        <div class="resume-skill-item">
-                          <ul class="list-unstyled mb-4">
-                            <li class="mb-2">
-                                <div class="resume-skill-name">Word/Excel/Powerpoint</div>
-                              <div class="progress resume-progress">
-                              <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-
-                        <div class="resume-skill-item">
-                          <ul class="list-unstyled mb-4">
-                            <li class="mb-2">
-                                <div class="resume-skill-name">Git</div>
-                              <div class="progress resume-progress">
-                              <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-
-                        <div class="resume-skill-item">
-                          <ul class="list-unstyled mb-4">
-                            <li class="mb-2">
-                                <div class="resume-skill-name">Python</div>
-                              <div class="progress resume-progress">
-                              <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-
-                        <div class="resume-skill-item">
-                          <ul class="list-unstyled mb-4">
-                            <li class="mb-2">
-                                <div class="resume-skill-name">HTML/CSS</div>
-                              <div class="progress resume-progress">
-                              <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-
-                        <div class="resume-skill-item">
-                          <ul class="list-unstyled mb-4">
-                            <li class="mb-2">
-                                <div class="resume-skill-name">LimeSurvey</div>
-                              <div class="progress resume-progress">
-                              <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-
-                        <div class="resume-skill-item">
-                          <ul class="list-unstyled mb-4">
-                            <li class="mb-2">
-                                <div class="resume-skill-name">REDCap</div>
-                              <div class="progress resume-progress">
-                              <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div> -->
 
                         <!-- Languages -->
-                        <!-- NOT WORKING !! -->
                         <div class="subheading mb-3">Languages</div>
                         <div class="resume-skill-item">
-                          <object data="/assets/img/fr.svg" width="120" height="90"> </object>
-                          <object data="/assets/img/us.svg" width="120" height="90"> </object>
-                          <object data="/assets/img/it.svg" width="120" height="90"> </object>
-                          <object data="/assets/img/de.svg" width="120" height="90"> </object>
+                          <object data="/assets/img/fr.svg" width="90" height="45"> </object>
+                          <object data="/assets/img/us.svg" width="90" height="45"> </object>
+                          <object data="/assets/img/it.svg" width="90" height="45"> </object>
+                          <object data="/assets/img/de.svg" width="90" height="45"> </object>
                           <!-- <ul class="list-inline dev-icons">
                             <span class=“path1”></span>
                             <li class="list-inline-item"><i class=“path1”></i></li>
