Tests with icons

--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
                             <li class="list-inline-item"><i class="fas fa-file-excel"></i></li>
                             <li class="list-inline-item"><i class="fas fa-file-powerpoint"></i></li>
                             <li class="list-inline-item"><i class="iconify" data-icon="whh:limesurvey"></i></li>
+                            <li class="list-inline-item"><object data="/assets/img/SPSS.ico" width="90" height="45"> </object></li>
                             <!-- MIssing: REDCap, SPSS, E-Prime -->
                           </ul>
 
@@ -272,7 +273,7 @@
                         <div class="subheading mb-3">Languages</div>
                         <div class="resume-skill-item">
                           <object data="/assets/img/fr.svg" width="90" height="45"> </object>
-                          <object data="/assets/img/us.svg" width="90" height="45"> </object>
+                          <object data="/assets/img/gb.svg" width="90" height="45"> </object>
                           <object data="/assets/img/it.svg" width="90" height="45"> </object>
                           <object data="/assets/img/de.svg" width="90" height="45"> </object>
                           <!-- <ul class="list-inline dev-icons">
