--- a/index.html
+++ b/index.html
@@ -264,7 +264,9 @@
                             <li class="list-inline-item"><i class="fas fa-file-excel"></i></li>
                             <li class="list-inline-item"><i class="fas fa-file-powerpoint"></i></li>
                             <li class="list-inline-item"><i class="iconify" data-icon="whh:limesurvey"></i></li>
-                            <li class="list-inline-item"><object data="/assets/img/SPSS.ico" width="45" height="45"> </object></li>
+                            <li class="list-inline-item"><object data="/assets/img/SPSS.ico" width="50" height="50"> </object></li>
+                            <li class="list-inline-item"><object data="/assets/img/EPrime3.ico" width="50" height="50"> </object></li>
+                            <li class="list-inline-item"><object data="/assets/img/REDCap.ico" width="50" height="50"> </object></li>
                             <!-- MIssing: REDCap, SPSS, E-Prime -->
                           </ul>
 
