--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#research">Research</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#medias">Medias</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                 </ul>
             </div>
@@ -340,7 +341,6 @@
                         <div><a href="https://www.frontiersin.org/articles/10.3389/fnins.2021.594536/full">Beta Electroencephalographic Oscillation Is a Potential GABAergic Biomarker of Chronic Peripheral Neuropathic Pain</a><br>
                         M. Texeira, C. Mancini, C.A. Wicht, G. Maestretti, T. Kuntzer, D. Cazzoli, M. Mouthon, J.-M. Annoni, J. Nsimire Chabwine. 2021, Frontiers in Neuroscience.</div>
                         </div>
-                        <br>
                         <div><a href="https://www.jns-journal.com/article/S0022-510X(19)30857-3/fulltext">Patients with fibromyalgia display two different clinical profiles based on their GABAergic EEG markers: Preliminary results</a><br>
                         C. Mancini, C.A. Wicht, M. Mouthon, S. Goetz, J. Nsimire Chabwine. 2019, Journal of the Neurological Sciences.</div>
                         </div>
@@ -349,15 +349,33 @@
                     <h3 class="mb-0">Automated EEG Data Processing</h3><br>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <!-- <div class="flex-shrink-0-im pr-5"><img src="assets/img/NeuroMorph_screenshot.png" width="200"> </div>
-                        <div class="flex-grow-1">
-                            <div><a href="http://neuromorph.epfl.ch" style="font-weight:bold;">Project Page</a></div>
-                            <br>
-                            <div><a href="https://github.com/NeuroMorph-EPFL/NeuroMorph" style="font-weight:bold;">Code and Documentation on GitHub</a></div>
-                        </div> -->
+                      <div class="flex-shrink-0-im pr-5"><img src="https://github.com/CorentinWicht/RESTINGLAB/raw/master/tools/screenshots/MainGUI.png" width="200"> </div>
+                      <div class="flex-grow-1">
+                      <div><a href="https://zenodo.org/badge/latestdoi/227150916">C.A. Wicht, RESTINGLAB, (2020), GitHub repository.</div>
+                      </div>
+                    </div>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                      <div class="flex-shrink-0-im pr-5"><img src="https://github.com/CorentinWicht/autoERP2.0/raw/master/Screenshots/ICA_ClassifierReject.png" width="200"> </div>
+                      <div class="flex-grow-1">
+                      <div><a href="https://zenodo.org/badge/latestdoi/355853456">C.A. Wicht, H. Najberg, autoERP2.0, (2021), GitHub repository.</div>
+                      </div>
                     </div>
                   </div>
                 <!-- </div> -->
+            </section>
+            <hr class="m-0" />
+
+            <!-- Medias-->
+            <section class="resume-section" id="medias">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Medias</h2>
+                    <div class="resume-section-content">
+
+                      <!-- Media communications -->
+
+                    </div>
+                </div>
             </section>
             <hr class="m-0" />
 
@@ -372,7 +390,7 @@
 
                             <div class="subheading mb-3">Music</div>
                             <p>guitar (since age of 10) · live concerts programming </p><br>
-                              <div class="subheading mb-4">Recorded albums</div>
+                              <div class="subheading mb-4">Studio albums</div>
                                 <div class="subheading mb-5">Hubris</div>
                                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                                     <div class="flex-shrink-0-im pr-5">
