--- a/index.html
+++ b/index.html
@@ -351,7 +351,8 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                       <div class="flex-shrink-0-im pr-5"><img src="https://github.com/CorentinWicht/RESTINGLAB/raw/master/tools/screenshots/MainGUI.png" width="200"> </div>
                       <div class="flex-grow-1">
-                      <div><a href="https://zenodo.org/badge/latestdoi/227150916">C.A. Wicht, RESTINGLAB, (2020), GitHub repository.</div>
+                        <div><a href="https://zenodo.org/badge/latestdoi/227150916">C.A. Wicht, RESTINGLAB, (2020), GitHub repository.</a><br>
+                        MATLAB toolbox relying on <a href="https://sccn.ucsd.edu/eeglab/index.php">EEGLAB</a> to perform semi-automated EEG Resting-State data pre-processing and basic analyses</div>
                       </div>
                     </div>
 
@@ -359,6 +360,7 @@
                       <div class="flex-shrink-0-im pr-5"><img src="https://github.com/CorentinWicht/autoERP2.0/raw/master/Screenshots/ICA_ClassifierReject.png" width="200"> </div>
                       <div class="flex-grow-1">
                       <div><a href="https://zenodo.org/badge/latestdoi/355853456">C.A. Wicht, H. Najberg, autoERP2.0, (2021), GitHub repository.</div>
+                      MATLAB toolbox relying on <a href="https://sccn.ucsd.edu/eeglab/index.php">EEGLAB</a> to perform automated EEG Event-Related Potential data pre-processing</div>
                       </div>
                     </div>
                   </div>
