--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                       <div class="flex-shrink-0-im pr-5"><img src="https://github.com/CorentinWicht/RESTINGLAB/raw/master/tools/screenshots/MainGUI.png" width="200"> </div>
                       <div class="flex-grow-1">
-                        <div><a href="https://github.com/CorentinWicht/RESTINGLAB">C.A. Wicht, RESTINGLAB, (2020), GitHub repository, https://zenodo.org/badge/latestdoi/227150916</a><br>
+                        <div><a href="https://github.com/CorentinWicht/RESTINGLAB">C.A. Wicht, RESTINGLAB, (2020), GitHub repository, DOI: 10.5281/zenodo.4022076</a><br>
                         MATLAB toolbox relying on <a href="https://sccn.ucsd.edu/eeglab/index.php">EEGLAB</a> to perform semi-automated EEG Resting-State data pre-processing and basic analyses</div>
                       </div>
                     </div>
@@ -359,7 +359,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                       <div class="flex-shrink-0-im pr-5"><img src="https://github.com/CorentinWicht/autoERP2.0/raw/master/Screenshots/ICA_ClassifierReject.png" width="200"> </div>
                       <div class="flex-grow-1">
-                      <div><a href="https://github.com/CorentinWicht/autoERP2.0">C.A. Wicht, H. Najberg, autoERP2.0, (2021), GitHub repository, https://zenodo.org/badge/latestdoi/355853456</a><br>
+                      <div><a href="https://github.com/CorentinWicht/autoERP2.0">C.A. Wicht, H. Najberg, autoERP2.0, (2021), GitHub repository, DOI: 10.5281/zenodo.4680109</a><br>
                       MATLAB toolbox relying on <a href="https://sccn.ucsd.edu/eeglab/index.php">EEGLAB</a> to perform automated EEG Event-Related Potential data pre-processing</div>
                       </div>
                     </div>
