--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                             <div class="subheading mb-3">Music</div>
                             <p>guitar (since age of 10) · live concerts programming </p><br>
                               <div class="subheading mb-4">Studio albums</div>
-                                <div class="subheading mb-5">Hubris</div>
+                                <div class="subheading mb-5">hubris.</div>
                                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                                     <div class="flex-shrink-0-im pr-5">
                                       <a href="https://hubrisband.bandcamp.com/album/apocryphal-gravity"><img src=https://f4.bcbits.com/img/a2851901234_10.jpg width="200"> </a>
