--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                             <p>hiking · biking · climbing  · cooking</p><br>
 
                             <div class="subheading mb-3">Music</div>
-                            <p>guitar (since age of 10) · live concerts programming </p><br>
+                            <p>guitar (since age of 10) · <a href="https://www.facebook.com/FightClubBooking">live concerts programming</a></p><br>
                               <div class="subheading mb-4">Studio albums</div>
                                 <div class="subheading mb-1">hubris.</div>
                                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
