Updated "experience" with new position at UNIBE

--- a/index.html
+++ b/index.html
@@ -83,12 +83,21 @@
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Clinical Data Manager</h3>
+                            <div class="subheading mb-3"><a href="https://www.ctu.unibe.ch/">Clinical Trial Unit (CTU), University of Bern, CH</a></div>
+                            <p>Scientific staff member in the Data Management (DM) division</a></p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">10.2018-03.2022</span></div>
+                    </div>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Doc.CH PhD Student</h3>
                             <div class="subheading mb-3"><a href="https://www.unifr.ch/med/spierer/en/">Laboratory for Neurorehabilitation Science, University of Fribourg, CH</a></div>
                             <p>PhD in Neuroscience on the Neural Correlates of Placebo Effects [80%] under the supervision of <a href="https://www.unifr.ch/med/fr/section/departments/nms/people/11048/b2de9">PD Dr Lucas Spierer</a>
                             and <a href="https://psychologie.unibas.ch/de/personen/jens-gaab/curriculum-vitae/">Prof Jens Gaab</a></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">10.2018-Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">10.2018-03.2022</span></div>
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
