--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <div class="subheading mb-3"><a href="https://www.ctu.unibe.ch/">Clinical Trial Unit (CTU), University of Bern, CH</a></div>
                             <p>Scientific staff member in the Data Management (DM) division</a></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">10.2018-03.2022</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">02.2022-Present</span></div>
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
