Completed the Medias section

--- a/index.html
+++ b/index.html
@@ -383,6 +383,12 @@
                     <div class="resume-section-content">
 
                       <!-- Media communications -->
+                      <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-shrink-0-im pr-5"><img src="https://fr.wikipedia.org/wiki/Radio_Fribourg#/media/Fichier:Logo-radiofr-fri-fre-2018-rvb_1920x884.png" width="200"> </div>
+                        <div class="flex-grow-1">
+                          <div><a href="https://podcasts.radiofr.ch/075085d572c64fa2f4974959e0cf845f.mp3">Podcast on RadioFribourg about the Placebo Analgesia experiment (REF) (<i>in french</i>) </a><br>
+                        </div>
+                      </div>
 
                     </div>
                 </div>
