Minor fix to Cortex publication

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                         <div class="flex-shrink-0-im pr-5"><img src="assets/img/Cortex2019.png" width="200"> </div>
                         <div class="flex-grow-1">
                         <div><a href="https://doi.org/10.17605/OSF.IO/2VABK">Neural correlates of expectations induced effects of caffeine intake on executive functions</a><br>
-                        C.A. Wicht, M. De Pretto, M. Mouthon, L. Spierer. 2019, Cortex, <i>Registered Reports Stage 1 in-principle-acceptance</i>.</div>
+                        C.A. Wicht, M. De Pretto, M. Mouthon, L. Spierer. 2019, Cortex, <i>Accepted for publication</i>.</div>
                         </div>
                     </div>
 
