--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         Corentin
-                        <span class="text-primary">Wicht</span>, MsC.
+                        <span class="text-primary">Wicht</span>, MSc.
                     </h1>
                     <div class="subheading mb-5">
                         corentin.wicht@unifr.ch </div>
