Added the link for article on Fr-app

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                         <div class="flex-shrink-0-im pr-5"><img src="assets/img/EJN2021.png" width="200"> </div>
                         <div class="flex-grow-1">
                         <div><a href="https://doi.org/10.5281/zenodo.4541048">Distinct brain networks involved in placebo analgesia between individuals with or without prior experience with opioids</a><br>
-                        C.A. Wicht, M. Mouthon, J. Nsimire Chabwine, J. Gaab, L. Spierer. 2021, European Journal of Neuroscience, <i>Registered Report Stage 1 in-principle-acceptance</i>.</div>
+                        C.A. Wicht, M. Mouthon, J. Nsimire Chabwine, J. Gaab, L. Spierer. 2021, European Journal of Neuroscience, Registered Report, <i>accepted for publication</i>.</div>
                         </div>
                     </div>
 
@@ -326,7 +326,7 @@
                         <div class="flex-shrink-0-im pr-5"><img src="assets/img/Cortex2019.png" width="200"> </div>
                         <div class="flex-grow-1">
                         <div><a href="https://doi.org/10.17605/OSF.IO/2VABK">Neural correlates of expectations induced effects of caffeine intake on executive functions</a><br>
-                        C.A. Wicht, M. De Pretto, M. Mouthon, L. Spierer. 2019, Cortex, <i>Accepted for publication</i>.</div>
+                        C.A. Wicht, M. De Pretto, M. Mouthon, L. Spierer. 2019, Cortex, Registered Report, <i>accepted for publication</i>.</div>
                         </div>
                     </div>
 
@@ -386,7 +386,14 @@
                       <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-shrink-0-im pr-5"><img src="assets/img/RadioFR.png" width="200"> </div>
                         <div class="flex-grow-1">
-                          <div><a href="https://podcasts.radiofr.ch/075085d572c64fa2f4974959e0cf845f.mp3">Podcast on RadioFribourg about the Placebo Analgesia experiment (REF) (<i>in french</i>) </a><br>
+                          <div><a href="https://podcasts.radiofr.ch/075085d572c64fa2f4974959e0cf845f.mp3">Podcast on RadioFribourg about the Placebo Analgesia experiment (Wicht et al., 2022, EJN) (<i>in french</i>) </a><br>
+                        </div>
+                      </div>
+
+                      <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/FrApp.png" width="200"> </div>
+                        <div class="flex-grow-1">
+                          <div><a href="https://frapp.ch/fr/articles/stories/unifr-morphine">Article on the Placebo Analgesia experiment (Wicht et al., 2022, EJN) (<i>in french</i>) </a><br>
                         </div>
                       </div>
 
