--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-shrink-0-im pr-5"><img src="assets/img/EJN2021.png" width="200"> </div>
                         <div class="flex-grow-1">
-                        <div><a href="https://doi.org/10.5281/zenodo.4541048">Distinct brain networks involved in placebo analgesia between individuals with or without prior experience with opioids</a><br>
+                        <div><a href="https://doi.org/10.5281/zenodo.4541048">Experience with opioids does not modify the brain network involved in expectations of placebo analgesia</a><br>
                         C.A. Wicht, M. Mouthon, J. Nsimire Chabwine, J. Gaab, L. Spierer. 2021, European Journal of Neuroscience, Registered Report, <i>accepted for publication</i>.</div>
                         </div>
                     </div>
