--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#research">Research</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#research">Fundings</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#medias">Medias</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                 </ul>
@@ -160,7 +161,7 @@
                           <div class="subheading mb-3"><a href="https://www.unifr.ch/med/fr/">Department of Medicine, University of Fribourg, CH</a></div>
                           <p>Development of a semi-automated EEG pre-processing and analysis software and analysis of clinical data under the supervision of <a href="https://perso.unifr.ch/pascal.gygax/">MD Dr Joelle Chabwine</a> </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">XX.2016-XX.2017</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">09.2016-10.2017</span></div>
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -373,6 +374,28 @@
                       </div>
                     </div>
                   </div>
+            </section>
+            <hr class="m-0" />
+
+            <!-- Medias-->
+            <section class="resume-section" id="medias">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Fundings</h2>
+                    <div class="resume-section-content">
+
+                      <!-- Funding sources -->
+                      <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-shrink-0-im pr-5"><img src="https://www.cinfo.ch/sites/default/files/styles/thumbnail_700x400/public/snf_def.jpg?itok=k9GFf9ni" width="200"> </div>
+                        <div class="flex-grow-1">
+                          <div><a href="https://data.snf.ch/grants/grant/181689"><b>Doc.CH Swiss National Science Foundation (SNSF)</b></a><br>
+                          <i>Beliefs and expectation effects in health concerns about modern technologies</i><br>
+                          Principal investigator and grant recipient: Corentin A. Wicht, CHF 207’608</div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2018-2022</span></div>
+                      </div>
+
+                    </div>
+                </div>
             </section>
             <hr class="m-0" />
 
